--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,19 +1,13 @@
 import:
-    - /home/garu/.config/alacritty/colors.yml
+    - ~/.config/alacritty/colors.yml
 
-env:
-  TERM: alacritty
+#env:
+#  TERM: st-256color  <- for non eraseble scrollback
 
 window:
   dynamic_title: true
-
-#  dynamic_padding: true
-  
-  padding:
-    x: 0
-    y: 0
-
   gtk_theme_variant: dark
+  opacity: 0.25
 
 scrolling:
   history: 10000
@@ -21,7 +15,7 @@ scrolling:
 
 font:
   normal:
-    family: JetBrains Mono Nerd Font 
+    family: JetBrains Mono Nerd Font
     style: Regular
 
   bold:
@@ -33,7 +27,7 @@ font:
   bold_italic:
     style: Italic
 
-  size: 11
+  size: 13
 
   offset:
     x: -1
@@ -41,14 +35,15 @@ font:
 
 draw_bold_text_with_bright_colors: true
 
-background_opacity: 0.8
-
 cursor:
   style:
     blinking: Always
 
   blink_interval: 200
 
-  thickness: 0.20
+  thickness: 0.2
 
-
+shell:
+  program: /bin/bash
+  args:
+    - --login
