--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -15,7 +15,8 @@ scrolling:
 
 font:
   normal:
-    family: JetBrains Mono Nerd Font
+    #family: JetBrains Mono Nerd Font
+    family: JetBrains Mono
     style: Regular
 
   bold:
