--- a/picom.conf
+++ b/picom.conf
@@ -2,10 +2,10 @@
 #          Animations           #
 #################################
 transition-length = 0
-transition-pow-x = 0.0001
-transition-pow-y = 0.0001
-transition-pow-w = 0.0001
-transition-pow-h = 0.0001
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
 size-transition = false
 
 #################################
@@ -237,9 +237,7 @@ opacity-rule = [
 # blur-kern = "3x3box";
 
 blur: {
-  # requires: https://github.com/ibhagwan/picom
-#  method = "dual_kawase";
-  #method = "kernel";
+  method = "kernel";
   strength = 10;
   #deviation = 1.0;
   #kernel = "11x11gaussian";
@@ -273,7 +271,7 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-experimental-backends = true;
+#experimental-backends = true;
 backend = "glx";
 #backend = "xrender";
 
@@ -306,12 +304,6 @@ detect-rounded-corners = true;
 #
 # detect-client-opacity = false
 detect-client-opacity = true;
-
-# Specify refresh rate of the screen. If not specified or 0, picom will 
-# try detecting this with X RandR extension.
-#
-# refresh-rate = 60
-refresh-rate = 0
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
