--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -6,8 +6,9 @@ import:
 
 window:
   dynamic_title: true
-  gtk_theme_variant: dark
-  opacity: 0.25
+  dynamic_padding: true
+  gtk_theme_variant: None
+  opacity: 0.75
 
 scrolling:
   history: 10000
