--- a/picom-jonaburg.conf
+++ b/picom-jonaburg.conf
@@ -3,12 +3,12 @@
 #################################
 # requires https://github.com/jonaburg/picom
 # (These are also the default values)
-#transition-length = 300
-#transition-pow-x = 0.1
-#transition-pow-y = 0.1
-#transition-pow-w = 0.1
-#transition-pow-h = 0.1
-#size-transition = true
+transition-length = 1
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
+size-transition = false
 
 
 #################################
@@ -20,7 +20,7 @@ rounded-corners-exclude = [
     #"window_type = 'normal'",
     "class_g = 'dwm'",
 ];
-round-borders = 1;
+round-borders = 0;
 round-borders-exclude = [
     #"class_g = 'TelegramDesktop'",
 ];
@@ -34,8 +34,8 @@ round-borders-exclude = [
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
-shadow = false;
+#shadow = false
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -55,7 +55,7 @@ shadow-offset-y = -7;
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
 #
-# no-dock-shadow = false
+#no-dock-shadow = false
 
 # Don't draw shadows on drag-and-drop windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -116,8 +116,8 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-# fading = false
-fading = true;
+fading = false
+#fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -149,12 +149,12 @@ fade-exclude = [
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 1
+#inactive-opacity = 0.5;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 0.7;
+#frame-opacity = 1.0
+frame-opacity = 0.9
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0
@@ -166,11 +166,12 @@ dropdown_menu = { opacity = 0.8; }
 
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-# inactive-opacity-override = true
+#inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 active-opacity = 1.0;
+#active-opacity = 0.5;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -178,6 +179,7 @@ active-opacity = 1.0;
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
 focus-exclude = [
+    "class_g = 'dwm'",
     "class_g = 'Cairo-clock'",
     "class_g = 'Bar'",                    # lemonbar
     "class_g = 'slop'"                    # maim
@@ -195,19 +197,12 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
-    "80:class_g     =   'Bar'",             # lemonbar
-    "100:class_g    =   'slop'",            # maim
-    "100:class_g    =   'XTerm'",
+#   "80:class_g     =   'Bar'",             # lemonbar
+#   "100:class_g    =   'slop'",            # maim
+    "85:class_g     =   'dwm'",
     "100:class_g    =   'URxvt'",
     "100:class_g    =   'kitty'",
     "100:class_g    =   'Alacritty'",
-    "80:class_g     =   'Polybar'",
-    "100:class_g    =   'code-oss'",
-    "100:class_g    =   'Meld'",
-    "70:class_g     =   'TelegramDesktop'",
-    "90:class_g     =   'Joplin'",
-    "100:class_g    =   'firefox'",
-    "100:class_g    =   'Thunderbird'"
 ];
 
 
@@ -249,12 +244,12 @@ opacity-rule = [
 
 blur: {
     # requires: https://github.com/ibhagwan/picom
-    method = "kawase";
+    method = "dual_kawase";
     #method = "kernel";
-    strength = 15;
+    strength = 7;
     # deviation = 1.0;
     # kernel = "11x11gaussian";
-    background = false;
+    background = true;
     background-frame = false;
     background-fixed = false;
     kern = "3x3box";
@@ -290,7 +285,7 @@ backend = "glx";
 
 
 # Enable/disable VSync.
-# vsync = false
+#vsync = false
 vsync = true
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
@@ -299,30 +294,24 @@ vsync = true
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
 #
-# mark-wmwin-focused = false
-mark-wmwin-focused = true;
+mark-wmwin-focused = false
+#mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
-mark-ovredir-focused = true;
+mark-ovredir-focused = false
+#mark-ovredir-focused = true;
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
 #
-# detect-rounded-corners = false
-detect-rounded-corners = true;
+detect-rounded-corners = false
+#detect-rounded-corners = true;
 
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
 #
 # detect-client-opacity = false
 detect-client-opacity = true;
-
-# Specify refresh rate of the screen. If not specified or 0, picom will
-# try detecting this with X RandR extension.
-#
-# refresh-rate = 60
-refresh-rate = 0
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to
 # boost performance. This should not be used with
@@ -496,7 +485,7 @@ wintypes:
 {
   normal = { fade = false; shadow = false; }
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
+  dock = { shadow = true; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
