--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,5 +1,5 @@
 import:
-    - ~/.config/alacritty/colors.yml
+    - ~/.config/alacritty/muhcolors.yml
 
 #env:
 #  TERM: st-256color  <- for non eraseble scrollback
@@ -35,6 +35,7 @@ font:
 #    y: -1
 
 draw_bold_text_with_bright_colors: true
+live_config_reload: true
 
 cursor:
   style:
